# age-plotter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  connections.example.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docker.yml
docs/: ARCHITECTURE.md
scripts/: copy-monaco.mjs  esbuild.mjs
src/age_plotter/: __init__.py  __main__.py  main.py
src/age_plotter/models/: __init__.py  connection.py  result.py
src/age_plotter/routes/: __init__.py  connection.py  query.py  schema.py
src/age_plotter/services/: __init__.py  age_client.py  connection_store.py  neo4j_client.py  query_executor.py  schema_introspector.py
src/age_plotter/static/css/: input.css
src/age_plotter/static/js/: completions.js  cypher-age.js  cypher-neo4j.js  cypher-tokens.js  editor.js  graph.js  results.js  schema-cache.js  schema-popover.js  vendor.entry.js
src/age_plotter/templates/: base.html  connection.html  query.html
src/age_plotter/templates/partials/: error.html  graph_view.html  node_modal.html  result.html  result_panel.html  table_view.html
