[project]
name = "age-plotter"
version = "0.1.0"
description = "Web UI for Neo4j and PostgreSQL AGE graph queries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "neo4j>=5.0",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",  # form handling
    "itsdangerous>=2.0",        # session middleware
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/age_plotter"]
